# kicad-agent

./: AGENTS.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/: 25-COUNCIL-PLAN-REVIEW.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-operation-schema-and-ir-layer/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md
.planning/phases/03-validation-pipeline/: 03-03-SUMMARY.md
.planning/phases/05-net-reference-footprint-operations/: 05-02-SUMMARY.md
.planning/phases/07-gsd-skill-integration/: 07-01-PLAN.md  07-02-PLAN.md  07-03-PLAN.md  07-04-PLAN.md
.planning/phases/10-ai-driven-pcb-generation/: 10-02-SUMMARY.md  10-05-SUMMARY.md
.planning/phases/11-ltspice-integration/: 11-01-SUMMARY.md  11-03-SUMMARY.md  11-RESEARCH.md
.planning/phases/12-adi-footprint-library/: 12-01-PLAN.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md
.planning/phases/13-real-world-training-pipeline/: 13-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: collect_easyeda.py  collect_gold_standard.py  collect_schematics.py  collect_training_data.py  discover_100k.py  evaluate_models.py  extract_pdf_textbook.py  fetch_100k.py  prepare_sft_data.py  score_chain.py  train_grpo_mlx.py  train_real_reward.py  train_sft.py  train_sft_mlx.py  train_unified.py
skills/: SKILL.md  prompt.md
src/kicad_agent/: __init__.py  cli.py  context.py  handler.py
tests/: conftest.py  test_cli.py  test_code_quality.py  test_crawler_discovery.py  test_create_ops.py  test_erc_auto_fix.py  test_executor_ops.py  test_format_convert.py  test_generation_evaluation.py  test_generation_intent.py  test_generation_pipeline.py  test_handler.py  test_ir_cache.py  test_ir_layer.py  test_lib_table.py  test_llm_component_suggester.py  test_llm_design_critic.py  test_llm_e2e.py  test_llm_error_fixer.py  test_llm_intent_parser.py  test_llm_provider.py  test_llm_refinement.py  test_ltspice_parser.py  test_ltspice_writer.py  test_net_ops.py  test_normalizer.py  test_op_planner.py  test_packaging.py  test_pcb_ops.py  test_placement_interactive.py  test_placement_training.py  test_project_file.py  test_ref_ops.py  test_root_sheet.py  test_routing.py  test_sft_converter.py  test_slc_compliance.py  test_structural_validator.py  test_training_chains.py  test_training_dataset.py  (+5 more)
tests/data/: kicad6_test.kicad_sch
tests/test_crossfile/: test_diff.py  test_propagation.py
tests/test_mcp/: test_edit_server.py
tests/test_parser/: test_uuid_extractor.py
(+158 files in other folders)
