[project]
name = "kicad-agent"
version = "0.1.0"
description = "AI-safe structural editing of KiCad schematic, PCB, symbol, and footprint files"
requires-python = ">=3.11"
dependencies = [
    "kiutils>=1.4.8",
    "sexpdata>=1.0.0",
    "spicelib>=1.5.1",
    "networkx>=3.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "PyGithub>=2.9.1",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.7",
    "ruff>=0.13",
]
llm = [
    "anthropic>=0.61.0",
]

[project.scripts]
kicad-agent = "kicad_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
